--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </textarea>
                 <br>
                 <br>
-                <button id='submit'>Submit</button>
+                <button id='send'>Send</button>
                 <br>
                 <br>
          
